--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,8 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+/* nav styles */
+
 .inter-font{
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -41,8 +43,8 @@
   }
 .navbar{
   justify-content: space-between;
-  margin: 20px;
-  padding: 30px;
+  margin: 2rem;
+  padding: 2rem;
   align-items: center;
   }
 
@@ -60,9 +62,34 @@
   color: #252432
 }
 
-/* desktop responsive */
-/* @media screen and (mi){ */
+  /* banner styles */
+
+  .banner{
+    display: flex;
+    justify-content: space-around;
+    margin: 1rem;
+    padding: 1rem;
+  }
   
+  
+   .style{
+    font-size: 2rem;
+    line-height: 1.2;
+    padding-top: 2rem;
+    
+   }
+
+  .color{
+    color: #E95A08;
+  }
+  .p-color{
+    color: rgba(0, 0, 0, 0.5);
+  }
+ 
+  .image-style{
+    width: 570px;
+    height: 355px;
+  }
 
 
 /*  responsive mobile */
@@ -70,6 +97,16 @@
   .hide-on-mobile{
     display: none;
     align-items: center;
+  }
+  .banner{
+    display: flex;
+    flex-direction: column-reverse;
+  
+  }
+  .image-style{
+    width: 100%;
+    height: auto;
+    display: block;
   }
 
  }
