--- a/styles/style.css
+++ b/styles/style.css
@@ -91,6 +91,55 @@
     height: 355px;
   }
 
+  /* Plants Section */
+  .Plants Section{
+    margin: 2rem;
+    padding: 1rem;
+  }
+  .Plants{
+    text-align: center;
+  }
+  .container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-left: 1.5rem;
+  
+  }
+  .para-color{
+    color: #111111;
+    font-weight: 700;
+  }
+  .back-color{
+    background-color: #E95A08;
+    color: #FFFFFF;
+    border: 0 solid;
+    width: 200px;
+    height: 20px;
+    padding-bottom: 5px;
+  }
+  .card{
+    border: 2px;
+    padding: 10px;
+  }
+  .card img{
+    width: 100%;
+  }
+
+/* responsive desktop */
+@media screen and (min-width: 992px){
+  .navbar{
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .banner{
+
+  }
+  .Plants Section{
+
+  }
+  
+}
+
 
 /*  responsive mobile */
  @media screen and (max-width: 576px){
@@ -101,12 +150,17 @@
   .banner{
     display: flex;
     flex-direction: column-reverse;
+    text-align: left;
   
   }
   .image-style{
     width: 100%;
     height: auto;
     display: block;
+    
+  }
+  .container{
+    grid-template-columns: repeat(2, 1fr);
   }
 
  }
