--- a/styles/style.css
+++ b/styles/style.css
@@ -152,6 +152,91 @@
   width: 300px;
   height: 350px;
 }
+/* latest-deal-section */
+.latest-deal-section{
+  margin: 2rem;
+  padding: 2rem;
+}
+.head{
+  text-align: center;
+
+}
+ .image-1{
+  background-image: url('../assets/deal-bloom.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100px;
+  height: 15px;
+  margin: 1rem;
+  padding: 2rem;
+  border-radius: 10px;
+ } 
+
+.image-2{
+ background-image: url('../assets/deal-ana.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100px;
+  height: 15px;
+  margin: 1rem;
+  padding: 2rem;
+  border-radius: 10px;
+}
+.image-3{
+ background-image: url('../assets/deal-zabo.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 200px;
+  height: 120px;
+  margin: 1rem;
+  padding: 2rem;;
+  border-radius: 10px;
+  
+ 
+}
+.margin-padding{
+  text-align: center;
+  color: #FFFFFF;
+  padding: 5rem;
+
+}
+.grid-container{
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  
+}
+/* join-section */
+.join-style{
+  text-align: center;
+  background-image: url('../assets/news-letter-bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 200px;
+  margin: 2rem;
+  padding: 3rem;
+  
+}
+.sub-color{
+   background-color: #E95A08;
+   color: #FFFFFF;
+   
+}
+/* footer */
+.footer{
+  display: flex;
+  justify-content: space-around;
+}
+div img{
+  vertical-align: middle;
+  
+}
+
 
 /* responsive desktop */
 /* @media screen and (min-width: 992px){ */
@@ -196,7 +281,21 @@
 .plant-img{
   width: 100%;
 }
+.flex-layout{
 
+  
+}
+.image-1, .image-2, .image-3{
+  width: 100%;
+}
+.join-style{
+  /* width: 100%; */
+  height: 60px;
+  text-align: center;
+}
+.footer{
+  display: block;
+}
  }
 
   
